# FalconEYE

./: .gitignore  FalconEye_Docs.html  README.md  README_OLD.md  config.yaml  pyproject.toml
examples/: logging_integration_demo.py
src/falconeye/: __init__.py  __main__.py
src/falconeye/adapters/cli/: __init__.py  banner.py  commands.py  commands_projects.py  main.py
src/falconeye/adapters/formatters/: __init__.py  base_formatter.py  console_formatter.py  formatter_factory.py  html_formatter.py  (+2 more)
src/falconeye/domain/: __init__.py  exceptions.py
src/falconeye/infrastructure/: __init__.py
test_chromadb/: chroma.sqlite3
tests/: test_checksum_service.py  test_chroma_registry_adapter.py  test_circuit_breaker.py  test_cli_error_handling.py  test_cli_integration.py  test_complete_workflow.py  test_context_assembler_logging.py  test_di_container_integration.py  test_error_presenter.py  test_final_e2e_comprehensive.py  test_index_codebase_handler.py  test_index_codebase_handler_logging.py  test_logging_context.py  test_logging_infrastructure.py  test_project_identifier.py  test_project_metadata.py  test_retry_logic.py  test_review_file_handler_logging.py  test_security_analyzer_logging.py  test_smart_reindexing_integration.py
tests/archived/: test_all_plugins.py  test_comprehensive.py  test_document_embedding.py  test_phase3_comprehensive.py
tests/archived/test_chromadb/: chroma.sqlite3
tests/archived/test_cross_file_vuln/: README.md  TEST_RESULTS.md
tests/integration/: __init__.py  test_chroma_adapters.py  test_end_to_end.py  test_ollama_adapter.py
(+61 files in other folders)
